Fix overflow padding

--- a/components/header/header.css
+++ b/components/header/header.css
@@ -21,15 +21,6 @@
         padding: 0;
     }
 
-    .nav {
-        padding: 1.7rem 0 1.7rem 1.6rem;
-    }
-
-    .nav__menu {
-        display: flex;
-        justify-content: center;
-    }
-
     .header {
         border-bottom: solid 1px var(--color-alternate-grey-ligt);
     }
@@ -39,7 +30,6 @@
         font-weight: var(--font-weight-regular);
         line-height: 3.8rem;
         color: var(--color-text-grey);
-
-        padding-right: 7.1rem;
+        padding: 0 7.1rem 0 1.6rem;
     }
 }
