--- a/components/nav/nav.css
+++ b/components/nav/nav.css
@@ -43,9 +43,22 @@
         overflow: auto;
         white-space: nowrap;
         vertical-align:top;
+        padding: 0 1.6rem;
+        margin-bottom: -1.6rem;
     }
 
     .nav__bar::-webkit-scrollbar {
         width: 0;
+    }
+
+    .nav__menu {
+        display: flex;
+        justify-content: center;
+        padding: 1.7rem 1.6rem 0 1.6rem;
+    }
+
+    .nav__item:first-child {
+        padding-left: 1.6rem;
+        justify-self: end;
     }
 }
